--- a/pages/drug/remsspl/reference/_content.yaml
+++ b/pages/drug/remsspl/reference/_content.yaml
@@ -1,9 +1,8 @@
-- "## About"
-- Note that the effective_time of labeling is used to calculate how current data is. Some labeling is dated in the future, and that is reflected in the calculation above.
-- The openFDA drug product labeling API returns data from the [FDA Structured Product Labeling](https://open.fda.gov/data/spl/) (SPL) dataset. This dataset contains structured documentation about regulated products, submitted by manufacturers to FDA. OpenFDA uses the latest available bulk downloads, which have the latest version of every structured product labeling document for products that are actively marketed.
-- "### What is structured product labeling?"
-- Drug manufacturers and distributors submit documentation about their products to FDA. Labeling contains a summary of the essential scientific information needed for the safe and effective use of the drug.
-- The openFDA drug product labeling API returns data from these submissions for both prescription and over-the-counter (OTC) drugs. The labeling is broken into sections, such as indications for use (prescription drugs) or purpose (OTC drugs), adverse reactions, and so forth. There is considerable variation between drug products, since the information required for safe and effective use varies with the unique characteristics of each drug product.
+- "## About REMS SPL"
+- The Food and Drug Administration Amendments Act of 2007 gave FDA the authority to require a Risk Evaluation and Mitigation Strategy (REMS) from manufacturers to ensure that the benefits of a drug or biological product outweigh its risks. A REMs may be required by the FDA as part of the approval of a new product, or for an approved product when new safety information arises. Essentially, a REMS is a safety strategy to manage a known or potential serious risk associated with a medicine and to enable patients to have continued access to such medicines by managing their safe use. Each REMS has specific safety measures unique to the safety risks associated with a particular drug or class of drugs.
+- The FDA has begun accepting REMS in Structured Product Labeling (SPL) format to facilitate making REMS information available within existing healthcare systems and workflows. SPL can be used to capture and present REMS information in a format that is easily shared with stakeholders and readily incorporated into health information technology.
+- For more information about REMS, see the [FDA Basics Webinar - A Brief Overview of REMS](https://www.fda.gov/AboutFDA/Transparency/Basics/ucm325201.htm).
+- The openFDA REMS SPL API returns REMS data that has been submitted to the FDA electronically using the REMS SPL format.
 - "downloads"
 - "## Anatomy of a response"
 - "This is a simulated openFDA API return for a non-`count` query. It is divided into two high-level sections, `meta` and `results`."
@@ -42,12 +41,13 @@
   - version
   - effective_time
   - title
+  - sponsor_name
 - "### Related documents"
 - fields:
-  - set_id
+  - related_spl_document_set_id
 - "### SPL unclassified section"
 - fields:
-  - content
+  - record_details
 - "### REMS goals"
 - fields:
   - goal
@@ -71,7 +71,7 @@
   - stakeholder_code
   - requirement_name
   - reference_id
-- "### REMS Material"
+- "### REMS material"
 - fields:
   - name
   - reference
@@ -87,4 +87,3 @@
 - OpenFDA features harmonization of drug identifiers, to make it easier to connect REMS SPL records to other drug information. Drug products that appear in FAERS records are joined to the NDC dataset first on brand name, and if there is no brand name, on generic name. If that is succesful, further links are established to other datasets. The linked data is listed as an `openfda` annotation in the patient.drug section of a result.
 - fields:
   - openfda
-- "datasets"
