Updated library vulnerabilities & fixed infographic.

--- a/pages/animalandveterinary/label/_infographics.yaml
+++ b/pages/animalandveterinary/label/_infographics.yaml
@@ -15,7 +15,7 @@
     - title: "Contraindications include Hepatic Insufficiency"
       searchParam: 'contraindications:"hepatic insufficiency"'
   type: Line
-  dateConstraint: effective_time
+  dateConstraint: false
 - title: "Animal Drug interactions noted in labeling"
   short: "Animal Drug interactions"
   dataset: SPL
