--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "immutability-helper": "^2.6.6",
     "jquery": "^3.2.1",
     "localforage": "^1.5.2",
-    "marked": "0.3.9",
+    "marked": "^0.6.2",
     "matchmedia": "^0.1.2",
     "nib": "^1.1.2",
     "pondjs": "0.8.7",
