--- a/src/pages/apis/drug/orangebook/_explorers.yaml
+++ b/src/pages/apis/drug/orangebook/_explorers.yaml
@@ -6,21 +6,28 @@ oneProduct:
     - "Search for all products."
     - "Limit to 1 record."
   query: 'https://api.orange-book.semanticbits.com/drug/orangebook.json?limit=1'
-lotion:
-  title: One lotion product
+expiring2020:
+  title: Expiring in 2020
   description:
-    - "This query searches all lotion products."
-    - "Limit to 1 record."
-    - 'Double quotation marks `" "` surround phrases that must match exactly.'
+    - "This query searches all products which are expiring in the calendar year 2020."
+    - 'Date ranges are wrapped in square brackets `[]`.'
   params:
-  - "Search for all products which have `dosage_form` equal to 'LOTION'."
+  - "Search for all products which have `patents.expire_date` falling within 2020."
+  - "Search for all products which have `exclusivity.exclusivity_expire_date` falling within 2020."
   - "Limit to 1 record."
-  query: 'https://api.orange-book.semanticbits.com/drug/orangebook.json?search=dosage_form:"LOTION"&limit=1'
-countByType:
-  title: Count of products, by product type
+  query: 'https://api.orange-book.semanticbits.com/drug/orangebook.json?search=patents.expire_date:[2020-01-01+TO+2020-12-31]+exclusivity.exclusivity_expire_date:[2020-01-01+TO+2020-12-31]'
+singleSource:
+  title: Single source products
   description:
-    - "This query compares the number of OTC and prescription products."
-    - "The suffix .exact is required by openFDA to count the unique full phrases in the field product_type. Without it, the API will count each word in that field individually—HUMAN OTC DRUG would be counted as separate values, HUMAN and OTC and DRUG."
+    - "This query searches for all products which have only a single source."
   params:
-  - "Count the field product_type (product type)."
-  query: 'https://api.orange-book.semanticbits.com/drug/orangebook.json?count=product_type.exact'
+    - "Search for all products without a therapeutic equivalence code."
+    - "Limit to 20 records."
+  query: 'https://api.orange-book.semanticbits.com/drug/orangebook.json?search=_missing_:therapeutic_equivalence_codes&limit=20'
+countByType:
+  title: Count of products, by application type
+  description:
+    - "This query compares the number of results which fall into the different application types. New applications are designated as `N`, while abbreviated applications are designated as `A`."
+  params:
+  - "Count the field application_type (application type)."
+  query: 'https://api.orange-book.semanticbits.com/drug/orangebook.json?count=application_type'
