--- a/src/pages/apis/drug/orangebook/_infographics.yaml
+++ b/src/pages/apis/drug/orangebook/_infographics.yaml
@@ -1,3 +1,23 @@
+- title: "Approval over time"
+  short: "Approval over time"
+  description:
+    - "This is a visualization of approval dates over time."
+  countParam: "approval_date"
+  filters:
+    - title: "All products"
+      searchParam: ""
+    - title: "Over-the-counter drug labeling"
+      searchParam: "product_type:otc"
+    - title: "Prescription drug labeling"
+      searchParam: "product_type:prescription"
+    - title: "Discontinued"
+      searchParam: "product_type:discontinued"
+    - title: "New Drug Application"
+      searchParam: "route:oral"
+    - title: "Abbreviated New Drug Application"
+      searchParam: "route:intravenous"
+  type: Line
+  dateConstraint: approval_date
 - title: "Top dosage form results"
   short: "Dosage form"
   description:
@@ -31,26 +51,4 @@
     - title: "Discontinued"
       searchParam: "product_type:discontinued"
   type: Line
-  dateConstraint: false
-- title: "Approval over time"
-  short: "Approval over time"
-  description:
-    - "This is a visualization of approval dates over time."
-  countParam: "approval_date"
-  filters:
-    - title: "All products"
-      searchParam: ""
-    - title: "Over-the-counter drug labeling"
-      searchParam: "product_type:otc"
-    - title: "Prescription drug labeling"
-      searchParam: "product_type:prescription"
-    - title: "Discontinued"
-      searchParam: "product_type:discontinued"
-    - title: "Oral route of administation"
-      searchParam: "route:oral"
-    - title: "Intravenous route of administation"
-      searchParam: "route:intravenous"
-    - title: "Topical route of administation"
-      searchParam: "route:topical"
-  type: Bar
   dateConstraint: false
