--- a/src/pages/apis/device/covid19serology/_meta.yaml
+++ b/src/pages/apis/device/covid19serology/_meta.yaml
@@ -1,11 +1,11 @@
 type: endpoint
-documentTitle: openFDA › Device › COVID-19 Serological testing validation API
-label: Device serological testing validation
-title: Device Serological Testing Validation
+documentTitle: openFDA › Device › COVID-19 Serological testing evaluations API
+label: Device serological testing evaluations
+title: Device Serological Testing Evaluations
 description:
 datasets:
   - covid19serology
 path: /apis/device/covid19serology
-api_path: /device/serologytest
+api_path: /device/covid19serology
 start: 20200101
-status: deviceserologytest
+status: devicecovid19serology
