--- a/src/pages/apis/device/covid19serology/_meta.yaml
+++ b/src/pages/apis/device/covid19serology/_meta.yaml
@@ -8,4 +8,4 @@ datasets:
 path: /apis/device/covid19serology
 api_path: /device/covid19serology
 start: 20200101
-status: devicecovid19serology
+status: covid19serology
