--- a/src/pages/about/updates/2019_04_03_Animal_Drug_Adverse_Events_Now_Available/_meta.yaml
+++ b/src/pages/about/updates/2019_04_03_Animal_Drug_Adverse_Events_Now_Available/_meta.yaml
@@ -3,5 +3,5 @@ label: "Animal Drug Adverse Events Now Available"
 title: "Animal Drug Adverse Events Now Available"
 path: /about/updates/2019_04_03_Animal_Drug_Adverse_Events_Now_Available/
 date: 2019-04-03
-authors: ["OpenFDA Team"]
+authors: ["openFDA Team"]
 type: update
